--- a/COLTeX/ref_books.bib
+++ b/COLTeX/ref_books.bib
@@ -175,6 +175,15 @@
   Year                     = {1989}
 }
 
+@book{Horowitz:1981307,
+	author        = "Horowitz, Paul and Hill, Winfield",
+	title         = "{The art of electronics; 3rd ed.}",
+	publisher     = "Cambridge University Press",
+	address       = "Cambridge",
+	year          = "2015",
+	url           = "https://cds.cern.ch/record/1981307",
+}
+
 @Book{Isidori:1989,
   Title                    = {Nonlinear Control Systems: An Introduction},
   Author                   = {Isidori, Alberto},
@@ -227,7 +236,12 @@
   Year                     = {1987},
   Series                   = {Prentice-Hall Information and System Sciences Series}
 }
-
+@Book{Markel1994,
+	author    = {Mike Markel},
+	publisher = {IEEE Press},
+	title     = {Writing in the technical fields: a step-by-step guide for engineers, scientists, and technicians},
+	year      = {1994},
+}
 @Book{Mallat:1998,
   Title                    = {A Wavelet Tour of Signal Processing},
   Author                   = {Mallat, S. G.},
